NBStudioCore/src/org/nbstudio/syntax/cls/clsParser.java
// Generated from /home/daimor/Dropbox/myProjects/NBStudio/NBStudioCore/src/org/nbstudio/syntax/cls/clsParser.g4 by ANTLR 4.1

    package org.nbstudio.syntax.cls; 

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class clsParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ReadOnly=49, LBrace=116, ReturnResultsets=72, Method=3, CompileAfter=21, 
		SqlRowIdName=37, GenerateAfter=68, ForeignKeyName=98, Property=4, PublicList=71, 
		IndexName=100, Data=60, Extends=13, SoapNameSpace=75, ClassName=92, SoapBodyUse=35, 
		SqlViewName=81, TriggerDeclaration=115, DdlAllowed=22, EOL=105, CodeMode=66, 
		SoapAction=73, Comment=120, Inverse=46, Hidden=25, Required=50, Index=5, 
		OnUpdate=90, Class=1, ClientName=20, SqlName=63, SqlComputeOnChange=55, 
		UpdateColumnList=88, MethodDeclaration=112, ZenMethod=79, SqlView=80, 
		RParen=119, SqlComputeCode=53, SoapMessageName=74, ClientDataType=19, 
		LParen=118, SqlFieldName=56, OldTable=85, IncludeCode=27, Multidimensional=47, 
		Time=87, INT=102, PlaceAfter=70, XDataName=94, Foreach=83, ClassMethod=2, 
		WS=111, Projection=15, On=14, OnDelete=89, QueryDeclaration=114, Language=29, 
		DependsOn=23, Private=48, Abstract=17, Unique=65, NewTable=84, ServerOnly=33, 
		WebMethod=78, IdKey=61, Final=24, FLOAT=103, SoapBindingStyle=34, ID=101, 
		Internal=45, ExternalProcName=67, XDataDeclaration=113, Event=82, COMMA=107, 
		NotForProperty=69, EQUAL=110, PropertyName=96, SqlListDelimiter=57, ForeignKey=6, 
		Storage=91, DOT=106, Relationship=11, PrimaryKey=62, RBrace=117, Import=26, 
		ViewQuery=41, PERCENT=108, Query=7, Type=64, As=16, DOTCOMMA=109, ProcedureBlock=32, 
		Order=86, Trigger=10, SqlColumnNumber=52, QueryName=95, MethodName=93, 
		SqlCollation=51, SqlTableName=39, Include=12, ParameterName=97, Parameter=8, 
		SqlListType=58, Transient=59, InitialExpression=44, Owner=31, SoapTypeNameSpace=76, 
		Description=121, SqlCategory=36, StorageStrategy=40, SqlRowIdPrivate=38, 
		Calculated=42, SqlProc=77, ClassType=18, Identity=43, SqlComputed=54, 
		TriggerName=99, OdbcType=30, IncludeGenerator=28, XData=9, STRING=104;
	public static final String[] tokenNames = {
		"<INVALID>", "Class", "ClassMethod", "Method", "Property", "Index", "ForeignKey", 
		"Query", "Parameter", "XData", "Trigger", "Relationship", "Include", "Extends", 
		"On", "Projection", "As", "Abstract", "ClassType", "ClientDataType", "ClientName", 
		"CompileAfter", "DdlAllowed", "DependsOn", "Final", "Hidden", "Import", 
		"IncludeCode", "IncludeGenerator", "Language", "OdbcType", "Owner", "ProcedureBlock", 
		"ServerOnly", "SoapBindingStyle", "SoapBodyUse", "SqlCategory", "SqlRowIdName", 
		"SqlRowIdPrivate", "SqlTableName", "StorageStrategy", "ViewQuery", "Calculated", 
		"Identity", "InitialExpression", "Internal", "Inverse", "Multidimensional", 
		"Private", "ReadOnly", "Required", "SqlCollation", "SqlColumnNumber", 
		"SqlComputeCode", "SqlComputed", "SqlComputeOnChange", "SqlFieldName", 
		"SqlListDelimiter", "SqlListType", "Transient", "Data", "IdKey", "PrimaryKey", 
		"SqlName", "Type", "Unique", "CodeMode", "ExternalProcName", "GenerateAfter", 
		"NotForProperty", "PlaceAfter", "PublicList", "ReturnResultsets", "SoapAction", 
		"SoapMessageName", "SoapNameSpace", "SoapTypeNameSpace", "SqlProc", "WebMethod", 
		"ZenMethod", "SqlView", "SqlViewName", "Event", "Foreach", "NewTable", 
		"OldTable", "Order", "Time", "UpdateColumnList", "OnDelete", "OnUpdate", 
		"Storage", "ClassName", "MethodName", "XDataName", "QueryName", "PropertyName", 
		"ParameterName", "ForeignKeyName", "TriggerName", "IndexName", "ID", "INT", 
		"FLOAT", "STRING", "EOL", "'.'", "','", "'%'", "';'", "'='", "WS", "MethodDeclaration", 
		"XDataDeclaration", "QueryDeclaration", "TriggerDeclaration", "'{'", "'}'", 
		"'('", "')'", "Comment", "Description"
	};
	public static final int
		RULE_prog = 0, RULE_includeDefinition = 1, RULE_includeFile = 2, RULE_includeFiles = 3, 
		RULE_classDefintion = 4, RULE_classNames = 5, RULE_classExtends = 6, RULE_classContent = 7, 
		RULE_propertyDefinition = 8, RULE_propertyType = 9, RULE_parameterDefinition = 10, 
		RULE_methodDefintion = 11, RULE_xdataDefinition = 12, RULE_queryDefinition = 13, 
		RULE_ids = 14, RULE_listProperties = 15, RULE_indexDefinition = 16;
	public static final String[] ruleNames = {
		"prog", "includeDefinition", "includeFile", "includeFiles", "classDefintion", 
		"classNames", "classExtends", "classContent", "propertyDefinition", "propertyType", 
		"parameterDefinition", "methodDefintion", "xdataDefinition", "queryDefinition", 
		"ids", "listProperties", "indexDefinition"
	};

	@Override
	public String getGrammarFileName() { return "clsParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public clsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<TerminalNode> Description() { return getTokens(clsParser.Description); }
		public TerminalNode Description(int i) {
			return getToken(clsParser.Description, i);
		}
		public ClassDefintionContext classDefintion() {
			return getRuleContext(ClassDefintionContext.class,0);
		}
		public IncludeDefinitionContext includeDefinition() {
			return getRuleContext(IncludeDefinitionContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_la = _input.LA(1);
			if (_la==Include) {
				{
				setState(34); includeDefinition();
				}
			}

			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Description) {
				{
				{
				setState(37); match(Description);
				}
				}
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(43); classDefintion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeDefinitionContext extends ParserRuleContext {
		public TerminalNode Include() { return getToken(clsParser.Include, 0); }
		public IncludeFilesContext includeFiles() {
			return getRuleContext(IncludeFilesContext.class,0);
		}
		public IncludeDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterIncludeDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitIncludeDefinition(this);
		}
	}

	public final IncludeDefinitionContext includeDefinition() throws RecognitionException {
		IncludeDefinitionContext _localctx = new IncludeDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_includeDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); match(Include);
			setState(46); includeFiles();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeFileContext extends ParserRuleContext {
		public TerminalNode PERCENT() { return getToken(clsParser.PERCENT, 0); }
		public TerminalNode ID() { return getToken(clsParser.ID, 0); }
		public IncludeFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterIncludeFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitIncludeFile(this);
		}
	}

	public final IncludeFileContext includeFile() throws RecognitionException {
		IncludeFileContext _localctx = new IncludeFileContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_includeFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_la = _input.LA(1);
			if (_la==PERCENT) {
				{
				setState(48); match(PERCENT);
				}
			}

			setState(51); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeFilesContext extends ParserRuleContext {
		public TerminalNode LParen() { return getToken(clsParser.LParen, 0); }
		public IncludeFileContext includeFile(int i) {
			return getRuleContext(IncludeFileContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(clsParser.COMMA); }
		public List<IncludeFileContext> includeFile() {
			return getRuleContexts(IncludeFileContext.class);
		}
		public TerminalNode RParen() { return getToken(clsParser.RParen, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(clsParser.COMMA, i);
		}
		public IncludeFilesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeFiles; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterIncludeFiles(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitIncludeFiles(this);
		}
	}

	public final IncludeFilesContext includeFiles() throws RecognitionException {
		IncludeFilesContext _localctx = new IncludeFilesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_includeFiles);
		int _la;
		try {
			setState(65);
			switch (_input.LA(1)) {
			case ID:
			case PERCENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(53); includeFile();
				}
				break;
			case LParen:
				enterOuterAlt(_localctx, 2);
				{
				setState(54); match(LParen);
				setState(55); includeFile();
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(56); match(COMMA);
					setState(57); includeFile();
					}
					}
					setState(62);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(63); match(RParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefintionContext extends ParserRuleContext {
		public ClassContentContext classContent(int i) {
			return getRuleContext(ClassContentContext.class,i);
		}
		public TerminalNode Class() { return getToken(clsParser.Class, 0); }
		public TerminalNode LBrace() { return getToken(clsParser.LBrace, 0); }
		public TerminalNode RBrace() { return getToken(clsParser.RBrace, 0); }
		public ClassNamesContext classNames() {
			return getRuleContext(ClassNamesContext.class,0);
		}
		public List<ClassContentContext> classContent() {
			return getRuleContexts(ClassContentContext.class);
		}
		public ClassExtendsContext classExtends() {
			return getRuleContext(ClassExtendsContext.class,0);
		}
		public ClassDefintionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDefintion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterClassDefintion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitClassDefintion(this);
		}
	}

	public final ClassDefintionContext classDefintion() throws RecognitionException {
		ClassDefintionContext _localctx = new ClassDefintionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classDefintion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); match(Class);
			setState(68); classNames();
			setState(70);
			_la = _input.LA(1);
			if (_la==Extends) {
				{
				setState(69); classExtends();
				}
			}

			setState(72); match(LBrace);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ClassMethod) | (1L << Method) | (1L << Property) | (1L << Index) | (1L << Query) | (1L << Parameter) | (1L << XData))) != 0) || _la==Comment || _la==Description) {
				{
				{
				setState(73); classContent();
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79); match(RBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassNamesContext extends ParserRuleContext {
		public TerminalNode LParen() { return getToken(clsParser.LParen, 0); }
		public List<TerminalNode> COMMA() { return getTokens(clsParser.COMMA); }
		public List<TerminalNode> ClassName() { return getTokens(clsParser.ClassName); }
		public TerminalNode RParen() { return getToken(clsParser.RParen, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(clsParser.COMMA, i);
		}
		public TerminalNode ClassName(int i) {
			return getToken(clsParser.ClassName, i);
		}
		public ClassNamesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classNames; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterClassNames(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitClassNames(this);
		}
	}

	public final ClassNamesContext classNames() throws RecognitionException {
		ClassNamesContext _localctx = new ClassNamesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classNames);
		int _la;
		try {
			setState(92);
			switch (_input.LA(1)) {
			case ClassName:
				enterOuterAlt(_localctx, 1);
				{
				setState(81); match(ClassName);
				}
				break;
			case LParen:
				enterOuterAlt(_localctx, 2);
				{
				setState(82); match(LParen);
				setState(83); match(ClassName);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(84); match(COMMA);
					setState(85); match(ClassName);
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(91); match(RParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassExtendsContext extends ParserRuleContext {
		public TerminalNode Extends() { return getToken(clsParser.Extends, 0); }
		public ClassNamesContext classNames() {
			return getRuleContext(ClassNamesContext.class,0);
		}
		public ClassExtendsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classExtends; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterClassExtends(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitClassExtends(this);
		}
	}

	public final ClassExtendsContext classExtends() throws RecognitionException {
		ClassExtendsContext _localctx = new ClassExtendsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_classExtends);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); match(Extends);
			setState(95); classNames();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassContentContext extends ParserRuleContext {
		public TerminalNode Description() { return getToken(clsParser.Description, 0); }
		public IndexDefinitionContext indexDefinition() {
			return getRuleContext(IndexDefinitionContext.class,0);
		}
		public ParameterDefinitionContext parameterDefinition() {
			return getRuleContext(ParameterDefinitionContext.class,0);
		}
		public XdataDefinitionContext xdataDefinition() {
			return getRuleContext(XdataDefinitionContext.class,0);
		}
		public MethodDefintionContext methodDefintion() {
			return getRuleContext(MethodDefintionContext.class,0);
		}
		public QueryDefinitionContext queryDefinition() {
			return getRuleContext(QueryDefinitionContext.class,0);
		}
		public TerminalNode Comment() { return getToken(clsParser.Comment, 0); }
		public PropertyDefinitionContext propertyDefinition() {
			return getRuleContext(PropertyDefinitionContext.class,0);
		}
		public ClassContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterClassContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitClassContent(this);
		}
	}

	public final ClassContentContext classContent() throws RecognitionException {
		ClassContentContext _localctx = new ClassContentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_classContent);
		try {
			setState(105);
			switch (_input.LA(1)) {
			case Description:
				enterOuterAlt(_localctx, 1);
				{
				setState(97); match(Description);
				}
				break;
			case Comment:
				enterOuterAlt(_localctx, 2);
				{
				setState(98); match(Comment);
				}
				break;
			case Property:
				enterOuterAlt(_localctx, 3);
				{
				setState(99); propertyDefinition();
				}
				break;
			case Parameter:
				enterOuterAlt(_localctx, 4);
				{
				setState(100); parameterDefinition();
				}
				break;
			case Index:
				enterOuterAlt(_localctx, 5);
				{
				setState(101); indexDefinition();
				}
				break;
			case ClassMethod:
			case Method:
				enterOuterAlt(_localctx, 6);
				{
				setState(102); methodDefintion();
				}
				break;
			case Query:
				enterOuterAlt(_localctx, 7);
				{
				setState(103); queryDefinition();
				}
				break;
			case XData:
				enterOuterAlt(_localctx, 8);
				{
				setState(104); xdataDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyDefinitionContext extends ParserRuleContext {
		public TerminalNode DOTCOMMA() { return getToken(clsParser.DOTCOMMA, 0); }
		public TerminalNode Property() { return getToken(clsParser.Property, 0); }
		public TerminalNode As() { return getToken(clsParser.As, 0); }
		public TerminalNode PropertyName() { return getToken(clsParser.PropertyName, 0); }
		public PropertyTypeContext propertyType() {
			return getRuleContext(PropertyTypeContext.class,0);
		}
		public PropertyDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterPropertyDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitPropertyDefinition(this);
		}
	}

	public final PropertyDefinitionContext propertyDefinition() throws RecognitionException {
		PropertyDefinitionContext _localctx = new PropertyDefinitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_propertyDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); match(Property);
			setState(108); match(PropertyName);
			setState(111);
			_la = _input.LA(1);
			if (_la==As) {
				{
				setState(109); match(As);
				setState(110); propertyType();
				}
			}

			setState(113); match(DOTCOMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyTypeContext extends ParserRuleContext {
		public TerminalNode ClassName() { return getToken(clsParser.ClassName, 0); }
		public PropertyTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterPropertyType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitPropertyType(this);
		}
	}

	public final PropertyTypeContext propertyType() throws RecognitionException {
		PropertyTypeContext _localctx = new PropertyTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_propertyType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(ClassName);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterDefinitionContext extends ParserRuleContext {
		public TerminalNode DOTCOMMA() { return getToken(clsParser.DOTCOMMA, 0); }
		public TerminalNode ParameterName() { return getToken(clsParser.ParameterName, 0); }
		public TerminalNode Parameter() { return getToken(clsParser.Parameter, 0); }
		public TerminalNode EQUAL() { return getToken(clsParser.EQUAL, 0); }
		public TerminalNode STRING() { return getToken(clsParser.STRING, 0); }
		public ParameterDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterParameterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitParameterDefinition(this);
		}
	}

	public final ParameterDefinitionContext parameterDefinition() throws RecognitionException {
		ParameterDefinitionContext _localctx = new ParameterDefinitionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_parameterDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117); match(Parameter);
			setState(118); match(ParameterName);
			setState(121);
			_la = _input.LA(1);
			if (_la==EQUAL) {
				{
				setState(119); match(EQUAL);
				setState(120); match(STRING);
				}
			}

			setState(123); match(DOTCOMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDefintionContext extends ParserRuleContext {
		public TerminalNode Method() { return getToken(clsParser.Method, 0); }
		public TerminalNode LParen() { return getToken(clsParser.LParen, 0); }
		public TerminalNode MethodDeclaration() { return getToken(clsParser.MethodDeclaration, 0); }
		public TerminalNode RParen() { return getToken(clsParser.RParen, 0); }
		public TerminalNode ClassMethod() { return getToken(clsParser.ClassMethod, 0); }
		public TerminalNode MethodName() { return getToken(clsParser.MethodName, 0); }
		public MethodDefintionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDefintion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterMethodDefintion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitMethodDefintion(this);
		}
	}

	public final MethodDefintionContext methodDefintion() throws RecognitionException {
		MethodDefintionContext _localctx = new MethodDefintionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_methodDefintion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !(_la==ClassMethod || _la==Method) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(126); match(MethodName);
			setState(127); match(LParen);
			setState(128); match(RParen);
			setState(129); match(MethodDeclaration);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class XdataDefinitionContext extends ParserRuleContext {
		public TerminalNode LParen() { return getToken(clsParser.LParen, 0); }
		public TerminalNode XDataDeclaration() { return getToken(clsParser.XDataDeclaration, 0); }
		public TerminalNode XData() { return getToken(clsParser.XData, 0); }
		public TerminalNode RParen() { return getToken(clsParser.RParen, 0); }
		public TerminalNode XDataName() { return getToken(clsParser.XDataName, 0); }
		public XdataDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xdataDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterXdataDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitXdataDefinition(this);
		}
	}

	public final XdataDefinitionContext xdataDefinition() throws RecognitionException {
		XdataDefinitionContext _localctx = new XdataDefinitionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_xdataDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131); match(XData);
			setState(132); match(XDataName);
			setState(135);
			_la = _input.LA(1);
			if (_la==LParen) {
				{
				setState(133); match(LParen);
				setState(134); match(RParen);
				}
			}

			setState(137); match(XDataDeclaration);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryDefinitionContext extends ParserRuleContext {
		public TerminalNode LParen() { return getToken(clsParser.LParen, 0); }
		public TerminalNode QueryName() { return getToken(clsParser.QueryName, 0); }
		public TerminalNode Query() { return getToken(clsParser.Query, 0); }
		public TerminalNode RParen() { return getToken(clsParser.RParen, 0); }
		public TerminalNode QueryDeclaration() { return getToken(clsParser.QueryDeclaration, 0); }
		public QueryDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).enterQueryDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof clsParserListener ) ((clsParserListener)listener).exitQueryDefinition(this);
		}
	}

	public final QueryDefinitionContext queryDefinition() throws RecognitionException {
		QueryDefinitionContext _localctx = new QueryDefinitionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_queryDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); match(Query);
			setState(140); match(QueryName);
			setState(143);
			_la = _input.LA(1);
			if (_la==LParen) {
				{
				setState(141); match(LParen);
				setState(142); match(RParen);
				}
			}

			setState(145); match(QueryDeclaration);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
